--- a/exercises/13_bk-attachment/main.css
+++ b/exercises/13_bk-attachment/main.css
@@ -20,13 +20,32 @@ h1 {
   color: white;
 }
 nav {
-  width: 50%;
-  margin: 2rem auto;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+ul {
+  display: flex;
+  /* flex-flow: row wrap; */
+  justify-content: center;
 }
 li {
-  display: inline-block;
   margin: 2rem;
+  border: 1px solid blue;
+  border-radius: 5px;
+  width: 150px;
+  height: 50px;
+}
+a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*border: 2px solid red;*/
+  border-radius: 5px;
+}
+a:hover {
+  background-color: black;
 }
 li:hover {
   color: greenyellow;
